--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>DONUTS!!!</title>
+    <title>Piu piu</title>
     <script src="scripts/phaser.min.js"></script>
 
     <script src="scripts/Scene1.js"></script>
@@ -13,17 +13,7 @@
 
     <script src="scripts/Game.js"></script>
 
-
-    <!-- <script src="scripts/Preload.js"></script>
-    <script src="scripts/GlobalVariables.js"></script>
-    <script src="scripts/GamePlay.js"></script> -->
-
-    <!-- <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet" /> -->
-
 </head>
-
 <body>
-
 </body>
-
 </html>
